fixing dark mode

--- a/styles.css
+++ b/styles.css
@@ -94,12 +94,12 @@ footer, #intro, #facts, #coming-soon, #technologies {
   footer, #intro, #facts, #coming-soon, #technologies {
     /*background-image: linear-gradient(midnightblue, royalblue);*/
     /*border-radius: 20px;*/
-    background-color: black;
+    background-color:rgb(51, 47, 79);
     border: 7px solid linen;
   }
 
   body {
-    color: ghostwhite;
+    color: linen;
     background: radial-gradient(#e66465, #9198e5);
     background-attachment: fixed;
   }
@@ -301,7 +301,7 @@ background-color: #9B570D;
     box-shadow: 20px 15px 20px #551755;
     opacity: 80%;
     /*border: 10px solid black;*/
-    color: black;
+    color:black;
   }
 }
 
